# backend-recruitment-exercise

./: .env.example  README.md  docker-compose.yml  run_all_tests.sh
aws_service/: Dockerfile  pyproject.toml
aws_service/app/: auth.py  main.py
metrics_lambda/: Dockerfile  handler.py  local_stub.py  pyproject.toml
pdf_service/: Dockerfile  pdf_metadata.db  pyproject.toml  test.db
pdf_service/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
rag_module/: .dockerignore  .env.example  Dockerfile  poetry.lock.bak  pyproject.toml
rag_module/app/: auth.py  exceptions.py  logger.py  main.py  schemas.py  utils.py
tests/: README.md  test_aws_service.py  test_metrics_lambda.py  test_pdf_service.py  test_rag_module.py
