[tool.poetry]
name = "metrics-lambda"
version = "0.1.0"
description = ""
authors = ["Aiswarya S <aiswaryaakku9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
pydantic = "^2.12.0"
pypdf2 = "^3.0.1"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
moto = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
