[project]
name = "pdf-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Aiswarya-s2413",email = "aiswaryaakku9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
